<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>visualization_tool</name>
  <version>1.0.0</version>
  <description>TODO: Package description</description>
  <author email="3576527475a@gmail.com">SillyBee</author>
   <maintainer email="3576527475a@gmail.com">SillyBee</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>serial_driver</depend>
  <depend>communicate_2025</depend>
  <depend>communicate_2025/Autoaim.msg</depend>
  <depend>communicate_2025/SerialInfo.msg</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
