<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>visualization_tool</name>
  <version>1.0.0</version>
  <description>TODO: Package description</description>
  <author email="3576527475a@gmail.com">SillyBee</author>
   <maintainer email="3576527475a@gmail.com">SillyBee</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
<!-- 添加构建和运行依赖 -->
<depend>rclcpp</depend>
<depend>std_msgs</depend>
<depend>sensor_msgs</depend>
<depend>communicate_2025</depend>

<!-- 如果communicate_2025包含自定义消息，需添加以下依赖 -->
<build_depend>rosidl_default_generators</build_depend>
<exec_depend>rosidl_default_runtime</exec_depend>

<!-- 声明Qt5依赖（假设使用系统Qt） -->
<build_depend>qtbase5-dev</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
